# astroscrappy

./: .gitignore  .travis.yml  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-tests.yml  release.yml
astroscrappy/: __init__.py  astroscrappy.pyx  conftest.py  setup_package.py
astroscrappy/tests/: coveragerc  fake_data.py  test_astroscrappy.py  test_cleaning.py  test_cleanmedian.py  test_gmos.py  test_utils.py
astroscrappy/tests/data/: gmos.fits
astroscrappy/utils/: __init__.py  image_utils.pyx  imutils.c  imutils.h  median_utils.pxd  median_utils.pyx  medutils.c  medutils.h  setup_package.py
docs/: conf.py  index.rst
docs/astroscrappy/: index.rst
licenses/: LICENSE.rst
scrappy/: __init__.py  scrappy.pyx
scrappy/tests/: test_scrappy.py
scrappy/utils/: __init__.py  image_utils.pyx  median_utils.pxd  median_utils.pyx  setup_package.py
