[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "extension-helpers==1.*",
            "numpy>=2.0.0rc1",
            "Cython>=3.0,<3.1"]

build-backend = 'setuptools.build_meta'

[tool.cibuildwheel]
# Skip pypy on mac due to numpy/accelerate issues
skip = ["pp*", "*musllinux*"]
environment = { PIP_PREFER_BINARY=1 }
test-requires = "pytest scipy"
test-command = "pytest --pyargs astroscrappy"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
