[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = astroscrappy
description = Speedy Cosmic Ray Annihilation Package in Python
long_description = This package was designed to detect and clean cosmic rays in images, originally based on the LA Cosmic algorithm.
author = Curtis McCully
author_email = cmccully@lcogt.net
license = BSD
edit_on_github = True
github_project = astropy/astroscrappy
url = https://github.com/astropy/astroscrappy

[entry_points]
