[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[pycodestyle]
# E101 - mix of tabs and spaces
# W191 - use of tabs
# W291 - trailing whitespace
# W292 - no newline at end of file
# W293 - trailing whitespace
# W391 - blank line at end of file
# E111 - 4 spaces per indentation level
# E112 - 4 spaces per indentation level
# E113 - 4 spaces per indentation level
# E901 - SyntaxError or IndentationError
# E902 - IOError
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[metadata]
package_name = astroscrappy
description = Speedy Cosmic Ray Annihilation Package in Python
long_description = This package was designed to detect and clean cosmic rays in images, originally based on the LA Cosmic algorithm.
author = Curtis McCully
author_email = cmccully@lco.global
license = BSD 3-Clause
edit_on_github = True
github_project = astropy/astroscrappy
url = https://github.com/astropy/astroscrappy

# install_requires should be formatted as a comma-separated list, e.g.:
# install_requires = astropy, scipy, matplotlib
install_requires = astropy, numpy
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 1.0.6.dev0
