[metadata]
name = astroscrappy
author = Curtis McCully
author_email = cmccully@lco.global
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/astropy/astroscrappy
description = Speedy Cosmic Ray Annihilation Package in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = astropy/astroscrappy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    numpy

# [options.entry_points]
# console_scripts =
#     astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
    scipy
docs =
    sphinx-astropy

[options.package_data]
astroscrappy = data/*

[tool:pytest]
testpaths = "astroscrappy" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = -p no:warnings --doctest-rst

[coverage:run]
omit =
    astroscrappy/_astropy_init*
    astroscrappy/conftest.py
    astroscrappy/*setup_package*
    astroscrappy/tests/*
    astroscrappy/*/tests/*
    astroscrappy/extern/*
    astroscrappy/version*
    */astroscrappy/_astropy_init*
    */astroscrappy/conftest.py
    */astroscrappy/*setup_package*
    */astroscrappy/tests/*
    */astroscrappy/*/tests/*
    */astroscrappy/extern/*
    */astroscrappy/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
